fixed overflowing task names

--- a/src/app/core/dashboard/deadline/deadline.component.scss
+++ b/src/app/core/dashboard/deadline/deadline.component.scss
@@ -63,5 +63,6 @@
         transition: all 0.2s ease-out;
         opacity: 0;
 		margin: auto 0;
+        padding-left: 1rem;
 	}
 }
