--- a/src/app/core/dashboard/work-unit-upcoming/work-unit-upcoming.component.scss
+++ b/src/app/core/dashboard/work-unit-upcoming/work-unit-upcoming.component.scss
@@ -58,9 +58,11 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        overflow: hidden;
 
         .work-unit-info {
             margin: auto 0;
+            overflow: hidden;
             flex: 1;
 
             .task-title {
